--- a/www/app/components/start/startView.html
+++ b/www/app/components/start/startView.html
@@ -29,8 +29,8 @@
     </ion-slide-box>
     <div>
       <div class="text-center start-buttons">
-        <button class="button button-positive ">Registrate</button>
-        <button class="button button-balanced">Iniciar Sesion</button>
+        <button class="button button-positive">Registrate</button>
+        <button class="button button-balanced" ng-click="vm.login()">Iniciar Sesion</button>
       </div>
     </div>
   </ion-content>
