added registration area

--- a/www/app/components/start/startView.html
+++ b/www/app/components/start/startView.html
@@ -29,7 +29,7 @@
     </ion-slide-box>
     <div>
       <div class="text-center start-buttons">
-        <button class="button button-positive">Registrate</button>
+        <button class="button button-positive" ng-click="vm.register()">Registrate</button>
         <button class="button button-balanced" ng-click="vm.login()">Iniciar Sesion</button>
       </div>
     </div>
