--- a/www/app/components/main/menu.html
+++ b/www/app/components/main/menu.html
@@ -19,7 +19,8 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close ng-click="vm.login()">
-          Login
+          <i class="icon ion-log-out"></i>
+          Logout
         </ion-item>
         <ion-item menu-close href="#/app/search">
           Search
@@ -29,6 +30,14 @@
         </ion-item>
         <ion-item menu-close href="#/app/playlists">
           Playlists
+        </ion-item>
+        <ion-item menu-close ng-click="">
+          <i class="icon ion-person"></i>
+          Perfil
+        </ion-item>
+        <ion-item menu-close ng-click="">
+          <i class="icon ion-star"></i>
+          Favoritos
         </ion-item>
       </ion-list>
     </ion-content>
