--- a/www/app/components/registration/registerView.html
+++ b/www/app/components/registration/registerView.html
@@ -26,11 +26,14 @@
         </label>
       </div>
     </form>
-    <div class="message-error" ng-if="vm.view.messageField">
+    <!--<div class="message-error" ng-if="vm.view.messageField">
       <h4 class="assertive">{{vm.view.messageField}}</h4>
     </div>
     <div class="message-error" ng-if="vm.view.messagePassword">
       <h4 class="assertive">{{vm.view.messagePassword}}</h4>
+    </div>-->
+    <div class="message-error" ng-if="vm.view.errorMessage">
+      <h4 class="assertive">{{vm.view.errorMessage}}</h4>
     </div>
   </ion-content>
 </ion-view>
