--- a/www/app/components/registration/registerView.html
+++ b/www/app/components/registration/registerView.html
@@ -5,20 +5,16 @@
     <form ng-submit="vm.saveUser()">
       <div class="list">
         <label class="item item-input">
-          <span class="input-label">Username</span>
-          <input type="text" ng-model="vm.createUser.username" ng-change="vm.closeMessage()">
+          <input type="text" ng-model="vm.createUser.username" ng-change="vm.closeMessage()" placeholder="Username">
         </label>
         <label class="item item-input">
-          <span class="input-label">Email</span>
-          <input type="text" ng-model="vm.createUser.email" ng-change="vm.closeMessage()">
+          <input type="text" ng-model="vm.createUser.email" ng-change="vm.closeMessage()" placeholder="Email">
         </label>
         <label class="item item-input">
-          <span class="input-label">Password</span>
-          <input type="password" ng-model="vm.createUser.password" ng-change="vm.closeMessage()">
+          <input type="password" ng-model="vm.createUser.password" ng-change="vm.closeMessage()" placeholder="Password">
         </label>
         <label class="item item-input">
-          <span class="input-label">Confirm password</span>
-          <input type="password" ng-model="vm.createUser.confirmPassword" ng-change="vm.closeMessage()">
+          <input type="password" ng-model="vm.createUser.confirmPassword" ng-change="vm.closeMessage()" placeholder="Confirm Password">
         </label>
 
         <label class="item">
