--- a/www/app/components/createAdd/createAddView.html
+++ b/www/app/components/createAdd/createAddView.html
@@ -12,26 +12,50 @@
     <div class="list">
       <label class="item item-input item-stacked-label">
         <span class="input-label">Titulo</span>
-        <input type="text" placeholder="Titulo">
+        <input type="text" placeholder="Titulo" ng-model="vm.view.title">
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Precio (Bs)</span>
-        <input type="number" placeholder="00.0">
+        <input type="number" placeholder="00.0" ng-model="vm.view.price">
+      </label>
+      <label class="item item-input item-stacked-label">
+        <span class="input-label">Tipo</span>
+        <div class="row">
+          <div class="col col-50 ">
+            <span class="input-label">Categoria</span>
+          </div>
+          <div class="col col-50 item-select">
+            <select
+              ng-options="list.category for list in vm.categoryList track by list.category"
+              ng-model="vm.view.category">
+            </select>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col col-50 ">
+            <span class="input-label">Sub-Categoria</span>
+          </div>
+          <div class="col col-50 item-select">
+            <select
+              ng-options="subList for subList in vm.view.category.subCategory track by subList"
+              ng-model="vm.view.subCategory">
+            </select>
+          </div>
+        </div>
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Detalle</span>
-        <textarea placeholder="Datos del producto"></textarea>
+        <textarea placeholder="Datos del producto" ng-model="vm.view.detail"></textarea>
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Descripcion</span>
-        <textarea placeholder="Es un producto para el uso multiple..."></textarea>
+        <textarea placeholder="Es un producto para el uso multiple..." ng-model="vm.view.description"></textarea>
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Subir Fotos</span>
-
       </label>
     </div>
-    <button class="button button-block button-positive" ng-click="">
+    <button class="button button-block button-positive" ng-click="vm.buttons.createAnuncio()">
       Añadir anuncion
     </button>
   </ion-content>
