Add anuncio detail

--- a/www/app/components/start/startView.html
+++ b/www/app/components/start/startView.html
@@ -3,10 +3,10 @@
   <ion-nav-bar></ion-nav-bar>
   <ion-header-bar></ion-header-bar>
   <ion-content>
-    <div>
+    <!--<div>
       <button class="button button-clear button-positive" ng-click="vm.previous()">previous</button>
       <button class="button button-clear button-positive" ng-click="vm.next()">next</button>
-    </div>
+    </div>-->
     <ion-slide-box on-slide-changed="slideChanged(index)">
       <ion-slide>
         <div class="slide-center">
