--- a/www/css/style.css
+++ b/www/css/style.css
@@ -29,11 +29,10 @@
   margin-left: 10%;
 }
 .category-options {
-  background-color: #acbfff;
   margin: 3px 10px;
 }
 .icon-options {
-  color: #1d730a;
+  color: #000000;
 }
 .category-red {
   background-color: #EA4335
