--- a/www/app/components/indexAdds/indexAddsView.html
+++ b/www/app/components/indexAdds/indexAddsView.html
@@ -12,6 +12,7 @@
     <button class="button button-block button-positive" ng-click="vm.view.buttons.createAdd()">
       Crear mi anuncio
     </button>
+    <img src="img/tigo.png" style="width: 100%">
     <ion-list  ng-repeat="category in vm.view.categories">
       <ion-item ng-click="vm.view.buttons.openCategory($index)" ng-class="category.class">
         <i ng-class="category.icon"></i>
