--- a/www/app/components/start/startView.html
+++ b/www/app/components/start/startView.html
@@ -12,18 +12,21 @@
         <div class="slide-center">
           <h2>¡ES GRATIS!</h2>
           <p>Encuentra de manera gratuita cientos de Avisos Clasificados en La Paz, Bolivia.</p>
+          <img style="width: 200px" src="img/autorojo.jpg">
         </div>
       </ion-slide>
       <ion-slide>
         <div class="slide-center">
           <h2>¡SIN INTERMEDIARIOS</h2>
           <p>Ponte en contacto directo con el Anunciante de la oprtunidad que te interesa.</p>
+          <img style="width: 200px" src="img/casaamrilla.jpg">
         </div>
       </ion-slide>
       <ion-slide>
         <div class="slide-center">
           <h2>¡FACIL Y SEGURO!</h2>
           <p>Contactae con nosotros o dirigete a nuestras oficinas. Estaremos felices de ayudarte</p>
+          <img style="width: 200px" src="img/job.jpg">
         </div>
       </ion-slide>
     </ion-slide-box>
